k8s-manifests/overlays/uat/superapp/client/utility/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: utility-route
spec:
  path: /api/v1/cbesuperapp/utility
  to:
    name: utility-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: utility-parser-route
spec:
  path: /api/v1/cbesuperapp/utility_parser
  to:
    name: utility-parser-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
